# mnn-llm

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README_en.MD  README_en.md  android_build.sh  chat.cpp  download_onnx.sh  export.py  modeling_chatglm.py
.github/: model-test.yml
.github/workflows/: all.yml  android-build.yml  android-cpu.yml  android.yml  build-test.yml  ios.yml  linux-cpu.yml  linux.yml  macos-cpu.yml  macos.yml  python.yml  stale.yml  windows-cpu.yml  windows.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: model  tokenizer
android/app/src/main/java/com/mnn/chatglm/: BaseActivity.java  Chat.java  Common.java  Conversation.java  DownloadModel.java  MainActivity.java
android/app/src/main/java/com/mnn/chatglm/recyclerdownload/: DownloadData.java  DownloadHolder.java  DownloadRecyclerView.java
android/app/src/main/java/com/mnn/chatglm/recylcerchat/: ChatData.java  ConversationRecyclerView.java  HolderDate.java  HolderMe.java  HolderYou.java
android/app/src/main/java/com/mnn/llm/: Chat.java  Conversation.java  DownloadModel.java  MainActivity.java
android/app/src/main/java/com/mnn/llm/recyclerdownload/: DownloadData.java  DownloadHolder.java  DownloadRecyclerView.java
android/app/src/main/java/com/mnn/llm/recylcerchat/: ChatData.java  ConversationRecyclerView.java  HolderDate.java  HolderMe.java  HolderYou.java
android/app/src/main/jni/: CMakeLists.txt  chatglm_mnn_jni.cpp  llm_mnn_jni.cpp
android/app/src/main/res/layout/: activity_download.xml  activity_main.xml  content_conversation.xml  download_item.xml  layout_holder_me.xml  layout_holder_you.xml
android/app/src/main/res/values/: models.xml  strings.xml
demo/: README.md  cli_demo.cpp  document_demo.cpp  embedding_demo.cpp  knowledge_demo.cpp  main.cpp  memory_demo.cpp  pipeline_demo.cpp  store_demo.cpp  tokenizer_demo.cpp  web_demo.cpp
dockerfiles/: cpu_fp16_normal.Dockerfile  cpu_int4_normal.Dockerfile  cpu_int8_normal.Dockerfile  cuda_int4.Dockerfile  x64-cuda-int8.Dockerfile
docs/: about.md  compile.md  conf.py  cpp_api.md  demo.md  download.md  export.md  faq.md  index.rst  llm_config.md  python_api.md  run.md  run_config.md
export_script/: README.md  export.py  export_layers.sh  gen_lm_onnx.py  modeling_chatglm.py  onnx2mnn.sh
include/: chat.hpp  llm.hpp  progress.h  tokenizer.hpp
include/spdlog/: common.h
include/spdlog/sinks/: ansicolor_sink-inl.h
ios/: README.md
ios/mnn-llm/mnn-llm/: ContentView.swift  LLMInferenceEngineWrapper.mm
ios/mnn-llm/mnn-llm.xcodeproj/: project.pbxproj
ios/mnn-llm/mnn-llm.xcodeproj/project.xcworkspace/xcuserdata/wangzhaode.xcuserdatad/: UserInterfaceState.xcuserstate
ios/mnn-llm/mnn-llm.xcodeproj/xcuserdata/wangzhaode.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/mnn-llm/mnn-llm.xcodeproj/xcuserdata/wangzhaode.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/mnn-llm/watchllm Watch App/: ContentView.swift  LLMInferenceEngineWrapper.mm  watchllmApp.swift
ios/mnn-llm/watchllm Watch App/Assets.xcassets/AppIcon.appiconset/: Contents.json
python/: README.md  mnnllm.cpp  pymnn_llm.py  setup.py  test.py
python/cmmlu/: qwen.py
python/mnnllm/: __init__.py
resource/: config.json  memory_demo.json  prompt.txt  prompt1.txt  template_config.json
resource/models/: download_models.ps1  download_models.sh  download_models_fp16.sh  download_models_int4.sh  download_models_int8.sh
resource/tokenizer/: Baichuan2_7b_vocab.txt  Chatglm2_6b_vocab.txt  Chatglm_6b_vocab.txt  Codegeex2_6b_vocab.txt  Llama2_7b_vocab.txt  Qwen_7b_vocab.txt  ice_text_new.model  slim_vocab.txt  vocab.txt
resource/web/: index.html
script/: android_app_build.sh  android_build.sh  build.ps1  build.sh  build_gpu.sh  download_model.ps1  download_model.sh  ios_build.sh  linux_build.sh  macos_build.sh  model_test.ps1  model_test.sh  package.ps1  package.sh  py_build.sh  windows_build.ps1
src/: chat.cpp  llm.cpp  llmconfig.hpp  main.cpp  tokenizer.cpp
watchos/mnn-llm/mnn-llm Watch App/: ContentView.swift  LLMInferenceEngineWrapper.mm  mnn_llmApp.swift
watchos/mnn-llm/mnn-llm.xcodeproj/: project.pbxproj
watchos/mnn-llm/mnn-llm.xcodeproj/project.xcworkspace/xcuserdata/wangzhaode.xcuserdatad/: UserInterfaceState.xcuserstate
watchos/mnn-llm/mnn-llm.xcodeproj/project.xcworkspace/xcuserdata/wangzhaode.xcuserdatad/Bookmarks/: bookmarks.plist
watchos/mnn-llm/mnn-llm.xcodeproj/xcuserdata/wangzhaode.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
watchos/mnn-llm/mnn-llm.xcodeproj/xcuserdata/wangzhaode.xcuserdatad/xcschemes/: xcschememanagement.plist
web/: index.html
